@@ -184,6 +184,7 @@ BUG FIXES
   o  That `.SD` doesn't retain column's class is now fixed (#2530). Thanks to Corone for reporting here on SO:
      http://stackoverflow.com/questions/14753411/why-does-data-table-lose-class-definition-in-sd-after-group-by
 
+  o  `eval(quote())` returned error when the quoted expression is a not-join, #4994. This is now fixed. Tests added.
 
 NOTES
 
